--- a/src/companypage/company.css
+++ b/src/companypage/company.css
@@ -1,6 +1,6 @@
 .company-div{
     width: 410px;
-    height: 310px;
+    height: 306px;
     /* border: solid; */
     border-radius: 10px;
     display: flex;
@@ -133,16 +133,18 @@
 }
 
 .compForm{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: rgba(247, 248, 250, 0.8);
     /* opacity: 0.1; */
-    position: absolute;
+    position: fixed;
     z-index: 20;
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
     
     
 }
@@ -151,10 +153,7 @@
     width: 770px;
     height: 650px;
     background-color: #FFFFFF;
-    position: absolute;
-    /* opacity: 0.9; */;
-    left: 575px;
-    top: 30px;
+   
     border: solid;
     display: flex;
     justify-content: center;
